--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@json2csv/plainjs": "^6.1.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@types/postcss-preset-env": "^7.7.0",
